Fix layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -125,6 +125,7 @@ section {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 #supporters-list h2 {
@@ -133,10 +134,11 @@ section {
 
 #supporters-list ul {
   list-style-type: none;
-  columns: 2;
+  /* columns: 2;
   -webkit-columns: 2;
   -moz-columns: 2;
-  min-width: 600px;
+  min-width: 600px; */
+  text-align: center;
   margin: 0px;
   padding: 0px;
 }
